# oxistart

./: .gitignore  Cargo.toml  GPUI_MIGRATION_PLAN.md  README.md  app.manifest  app.rc  build.bat  test_history.db  test_increment.db
.kilocode/: mcp.json
src/: app_model.rs  calculator.rs  db.rs  hooks.rs  main.rs  scanner.rs  settings.rs  ui.rs  utils.rs
