[package]
name = "startwin"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
once_cell = "1.19"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_System_Registry",
    "Win32_System_Threading",
]

[build-dependencies]
embed-resource = "2.4"
